Fix navbar close on mobiles. Adjust section id scroll margin at the top. Change the background colour to a lighter grey

--- a/assets/style/style-v2.css
+++ b/assets/style/style-v2.css
@@ -20,6 +20,9 @@ h1 {
 }
 
 /* Sections */
+section[id] {
+  scroll-margin-top: 80px;
+}
 
 /* Navbar Section */
 .navbar > .container-fluid {
